Fixed images not showing up on product page, edited style to center them

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,8 @@ html, body {
 #productImage {
     width: 90%;
     max-height: 60vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 #imageForward {
     float: right;
